[build-system]
requires = ["scikit-build-core >=0.9", "typing_extensions; python_version < '3.11'"]
build-backend = "scikit_build_core.build"

[project]
name = "pymtpng"
version = "1.0.3"
description = "Python bindings for MTPNG library"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Peter Würtz", email = "pwuertz@gmail.com" },
]
classifiers = [
    "License :: OSI Approved :: MIT License",
]

[project.urls]
Homepage = "https://github.com/pwuertz/pymtpng"

[tool.scikit-build]
wheel.py-api = "cp312"
